--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -11,9 +11,17 @@ env_logger = "0.9.0"
 chrono = "0.4.6"
 msql-srv = {path="../msql-srv"}
 mysql = "22.2.0"
+mysql_common = "0.28.2"
 
 clap = {version="3.2.14",features = [ "derive" ]}
 
 slab = "0.4.7"
 sqlparser = "0.18.0"
 redis = "0.21.5"
+serde = {version="1.0.140",features = ["derive"]}
+serde_bytes = "0.11.6"
+byte_struct = "0.8.0"
+speedy = "0.8.2"
+byte-array-struct = "0.2"
+bytes-cast = "0.2.0"
+simple_parse = "0.6.3"
