--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -22,6 +22,6 @@ clap = {version="3.2.14",features = [ "derive" ]}
 
 slab = "0.4.7"
 sqlparser = "0.18.0"
-redis = "0.21.5"
+redis = { version = "0.17.0", features = ["tokio-comp"] }
 serde = {version="1.0.140",features = ["derive"],default-features = false}
 serde_json = "1.0"
