--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -25,3 +25,9 @@ sqlparser = "0.18.0"
 redis = { version = "0.17.0", features = ["tokio-comp"] }
 serde = {version="1.0.140",features = ["derive"],default-features = false}
 serde_json = "1.0"
+
+metrics = "0.20.1"
+metrics-exporter-prometheus = {version="0.11.0",features = ["http-listener"] }
+quanta = "0.10.1"
+metrics-util = "0.14.0"
+rand = "0.8.5"
