--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -15,7 +15,7 @@ chrono = "0.4.19"
 mysql_common = { version = "0.29.0", features = ["chrono"] }
 nom = "7.1.0"
 tokio = { version = "1.17.0", features = ["full"] }
-opensrv-mysql = {path="../opensrv-mysql"}
+opensrv-mysql = "0.3.0"
 mysql_async = "0.30.0"
 
 clap = {version="3.2.14",features = [ "derive" ]}
