--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -31,3 +31,6 @@ metrics-exporter-prometheus = {version="0.11.0",features = ["http-listener"] }
 quanta = "0.10.1"
 metrics-util = "0.14.0"
 rand = "0.8.5"
+
+serde_derive = "1.0.152"
+toml = "0.5.10"
