--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -17,6 +17,7 @@ nom = "7.1.0"
 tokio = { version = "1.17.0", features = ["full"] }
 opensrv-mysql = "0.3.0"
 mysql_async = "0.30.0"
+sqlx = { version = "0.6", features = [ "runtime-tokio-native-tls" , "mysql" ] }
 
 clap = {version="3.2.14",features = [ "derive" ]}
 
