--- a/admin/Cargo.toml
+++ b/admin/Cargo.toml
@@ -9,6 +9,8 @@ edition = "2021"
 actix-web = "4"
 actix-cors = "0.6.4"
 actix-settings = "0.6.0"
+jsonwebtoken = "8.2.0"
+chrono = "0.4.23"
 
 log = "*"
 env_logger = "0.10.0"
