--- a/admin/Cargo.toml
+++ b/admin/Cargo.toml
@@ -20,3 +20,4 @@ env_logger = "0.10.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1"
 futures = "0.3"
+tokio = { version = "1.23.0", features = ["full"] }
