--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -39,3 +39,5 @@ serde_derive = "1.0.152"
 toml = "0.5.10"
 anyhow = "1.0.68"
 sha1 = "0.10.5"
+
+reqwest = { version = "0.11", features = ["json"] }
