--- a/admin/Cargo.toml
+++ b/admin/Cargo.toml
@@ -21,3 +21,5 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1"
 futures = "0.3"
 tokio = { version = "1.23.0", features = ["full"] }
+md5 = "0.7.0"
+rand = "0.8.5"
