--- a/admin/Cargo.toml
+++ b/admin/Cargo.toml
@@ -11,7 +11,7 @@ actix-cors = "0.6.4"
 actix-settings = "0.6.0"
 jsonwebtoken = "8.2.0"
 chrono = "0.4.23"
-sea-orm = { version = "^0", features = [ "sqlx-mysql", "runtime-tokio-native-tls", "macros" ] }
+sea-orm = { version = "^0", features = [ "sqlx-mysql", "runtime-tokio-rustls", "macros" ] }
 mysql = "23.0.1"
 anyhow = "1.0"
 
