--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -84,8 +84,8 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN }}
           with:
-            tag_name: ${{ steps.version.outputs.builddate }}
-            release_name: ${{ steps.version.outputs.builddate }}
+            tag_name: v1.0.0-beta
+            release_name: v1.0.0-beta
             body: 请见 changelog.md
             draft: false
             prerelease: false
