--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -79,9 +79,11 @@ jobs:
           rm -rf target/release/admin.pdb
           rm -rf target/release/server.d
           rm -rf target/release/server.pdb
-          mv target/release/admin* ./
-          mv target/release/server* ./
+          cd target/release
+          mv admin* ./
+          mv server* ./
           zip -r ${{ matrix.target.triple }}.zip admin* server*
+          mv ${{ matrix.target.triple }}.zip ../../
           
 
       - name: Create Release
