--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -63,7 +63,7 @@ jobs:
       - name: build
         timeout-minutes: 300
         run: |
-          cargo build --release  --target=${{ matrix.target.triple }} --verbose
+          cargo build --release  --target=${{ matrix.target.triple }}
 
 #      - uses: GoogleCloudPlatform/release-please-action@v3
 #        id: release
@@ -75,6 +75,8 @@ jobs:
 
       - name: Zip the Build
         run: |
+          pwd
+          ls -al
           rm -rf target/release/admin.d
           rm -rf target/release/admin.pdb
           rm -rf target/release/server.d
