--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -76,7 +76,7 @@ jobs:
       - name: Zip the Build
         run: |
           pwd
-          ls -al
+          ls -al target/release
           rm -rf target/release/admin.d
           rm -rf target/release/admin.pdb
           rm -rf target/release/server.d
