wip: 打包环境处理

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -63,7 +63,7 @@ jobs:
       - name: build
         timeout-minutes: 300
         run: |
-          cargo build --release  --target=${{ matrix.target.triple }}
+          cargo build --release
 
 #      - uses: GoogleCloudPlatform/release-please-action@v3
 #        id: release
