--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -86,15 +86,22 @@ jobs:
           zip -r ${{ matrix.target.triple }}.zip admin* server*
           mv ${{ matrix.target.triple }}.zip ../../
           
-
+      - name: Get current date
+        id: date
+        run: echo "::set-output name=date::$(date +'%Y-%m-%d')"
+      - name: Test with environment variables
+        run: echo $TAG_NAME - $RELEASE_NAME
+        env:
+          TAG_NAME: nightly-tag-${{ steps.date.outputs.date }}
+          RELEASE_NAME: nightly-release-${{ steps.date.outputs.date }}
       - name: Create Release
         id: create_release
         uses: actions/create-release@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: 1.0.0-beta1
-          release_name: 1.0.0-beta1
+          tag_name: ${{TAG_NAME}}
+          release_name: ${{RELEASE_NAME}}
           body: TODO New Release.
           draft: false
           prerelease: false
