--- a/admin/Cargo.toml
+++ b/admin/Cargo.toml
@@ -16,7 +16,7 @@ mysql = "23.0.1"
 anyhow = "1.0"
 
 log = "*"
-env_logger = "0.9.0"
+log4rs = { version = "1.2.0", features = ["all_components"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1"
 futures = "0.3"
