--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 
 [dependencies]
 log = "*"
-env_logger = "0.9.0"
+log4rs = { version = "1.2.0", features = ["all_components"] }
 
 async-trait = "0.1.52"
 byteorder = "1.4.3"
