--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,8 +16,8 @@ jobs:
       matrix:
         target:
           - { name: Linux, os: ubuntu-latest, triple: x86_64-unknown-linux-musl }
-          - { name: macOS, os: macos-latest, triple: x86_64-apple-darwin }
-          - { name: Windows, os: windows-2022, triple: x86_64-pc-windows-msvc }
+#          - { name: macOS, os: macos-latest, triple: x86_64-apple-darwin }
+#          - { name: Windows, os: windows-2022, triple: x86_64-pc-windows-msvc }
         version:
           - nightly
 
