--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,7 +15,7 @@ jobs:
       fail-fast: false
       matrix:
         target:
-          - { name: Linux, os: ubuntu-latest, triple: x86_64-unknown-linux-gnu }
+          - { name: Linux, os: ubuntu-latest, triple: x86_64-unknown-linux-musl }
 #          - { name: macOS, os: macos-latest, triple: x86_64-apple-darwin }
 #          - { name: Windows, os: windows-2022, triple: x86_64-pc-windows-msvc }
         version:
@@ -45,7 +45,8 @@ jobs:
       - name: Install ${{ matrix.version }}
         uses: actions-rs/toolchain@v1
         with:
-          toolchain: ${{ matrix.version }}-${{ matrix.target.triple }}
+          toolchain: ${{ matrix.version }}
+          target: ${{ matrix.target.triple }}
           profile: minimal
           override: true
 
