--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,6 +43,8 @@ jobs:
         if: ${{ matrix.target != 'i686-pc-windows-gnu' && matrix.target != 'i686-unknown-linux-gnu' }}
         env:
           TARGET_CC: clang
+          OPENSSL_LIB_DIR: /usr/lib/i386-linux-gnu/
+          OPENSSL_INCLUDE_DIR: /usr/include/openssl/
         with:
           command: build
           args: --release --target=${{ matrix.target }}
