--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,7 +27,11 @@ jobs:
         run: sudo dpkg --add-architecture i386 && sudo apt-get update && sudo apt-get install libssl-dev:i386 clang
       - name: Install x86_64 Build Dependencies
         if: ${{ matrix.target != 'i686-pc-windows-gnu' && matrix.target != 'i686-unknown-linux-gnu' }}
-        run: sudo apt-get update && sudo apt-get install pkg-config libssl-dev clang
+        run:
+          - sudo apt-get update && sudo apt-get install pkg-config libssl-dev clang
+          - ls -al /usr/lib
+          - ls -al /usr/lib/x86_64-unknown-linux-musl
+          - ls -al /usr/lib/x86_64-unknown-linux-gnu
       - name: Build x86
         uses: actions-rs/cargo@v1
         if: ${{ matrix.target == 'i686-pc-windows-gnu' || matrix.target == 'i686-unknown-linux-gnu' }}
