--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,7 +30,6 @@ jobs:
         run: |
           sudo apt-get update && sudo apt-get install pkg-config libssl-dev clang
           ls -al /usr/lib
-          ls -al /usr/lib/x86_64-unknown-linux-musl
           ls -al /usr/lib/x86_64-unknown-linux-gnu
       - name: Build x86
         uses: actions-rs/cargo@v1
@@ -47,7 +46,7 @@ jobs:
         if: ${{ matrix.target != 'i686-pc-windows-gnu' && matrix.target != 'i686-unknown-linux-gnu' }}
         env:
           TARGET_CC: clang
-          OPENSSL_LIB_DIR: /usr/lib/${{matrix.target}}/
+          OPENSSL_LIB_DIR: /usr/lib/x86_64-linux-gnu/
           OPENSSL_INCLUDE_DIR: /usr/include/openssl/
         with:
           command: build
