--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,11 +24,11 @@ jobs:
           override: true
       - name: Install x86 Build Dependencies
         if: ${{ matrix.target == 'i686-pc-windows-gnu' || matrix.target == 'i686-unknown-linux-gnu' }}
-        run: sudo dpkg --add-architecture i386 && sudo apt-get update && sudo apt-get install libssl-dev:i386 clang
+        run: sudo dpkg --add-architecture i386 && sudo apt-get update && sudo apt-get install libssl-dev:i386 clang libsqlite3-dev
       - name: Install x86_64 Build Dependencies
         if: ${{ matrix.target != 'i686-pc-windows-gnu' && matrix.target != 'i686-unknown-linux-gnu' }}
         run: |
-          sudo apt-get update && sudo apt-get install pkg-config libssl-dev clang
+          sudo apt-get update && sudo apt-get install pkg-config libssl-dev clang libsqlite3-dev
           ls -al /usr/lib
           ls -al /usr/lib/x86_64-linux-gnu
       - name: Build x86
@@ -51,3 +51,8 @@ jobs:
         with:
           command: build
           args: --release --target=${{ matrix.target }}
+      - name: Check Artifact
+        run: |
+          ls -al target/release
+          file target/release/admin
+          file target/release/server
