--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -55,7 +55,7 @@ jobs:
           curl -sSL https://zlib.net/zlib-$ZLIB_VER.tar.gz | tar xz && \
           cd zlib-$ZLIB_VER && \
           CC="musl-gcc -fPIC -pie" LDFLAGS="-L$PREFIX/lib" CFLAGS="-I$PREFIX/include" ./configure --static --prefix=$PREFIX && \
-          make -j$(nproc) && make install && \
+          sudo make -j$(nproc) && make install && \
           cd .. && rm -rf zlib-$ZLIB_VER
           
           curl -sSL https://www.openssl.org/source/openssl-$SSL_VER.tar.gz | tar xz && \
@@ -63,7 +63,7 @@ jobs:
           cd openssl-$SSL_VER && \
           ./Configure no-zlib no-shared -fPIC --prefix=$PREFIX --openssldir=$PREFIX/ssl linux-x86_64 && \
           env C_INCLUDE_PATH=$PREFIX/include make depend 2> /dev/null && \
-          make -j$(nproc) && make install && \
+          sudo make -j$(nproc) && make install && \
           cd .. && rm -rf openssl-$SSL_VER
           
           export PATH=$PREFIX/bin:$PATH
