--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -47,8 +47,9 @@ jobs:
         if: ${{ matrix.target != 'i686-pc-windows-gnu' && matrix.target != 'i686-unknown-linux-gnu' }}
         env:
           TARGET_CC: clang
-        run: |
-          cargo build --release --target=${{ matrix.target }}
+        with:
+          command: build
+          args: --release --target=${{ matrix.target }}
 
       - name: Check Artifact
         run: |
