--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -55,7 +55,7 @@ jobs:
           args: --release --target=${{ matrix.target }}
 
       - name: Build Linux Musl
-        uses: stevenleadbeater/rust-musl-builder@0.0.1
+        uses: gmiam/rust-musl-action@v1.1.2
         if: ${{ matrix.target == 'x86_64-unknown-linux-musl'}}
         with:
           args: /bin/bash -c "cargo build --release --target=${{ matrix.target }}"
