wip: 尝试静态编译linux版本

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -55,10 +55,10 @@ jobs:
           args: --release --target=${{ matrix.target }}
 
       - name: Build Linux Musl
-        uses: sassman/rust-deb-builder@v1
-        if: ${{ matrix.target == 'x86_64-unknown-linux-musl'}}
+        uses: jean-dfinity/rust-musl-action@master
         with:
-          args: /bin/bash -c "cargo build --release --target=${{ matrix.target }}"
+          args: cargo build --target ${{ matrix.target }} --release
+        if: ${{ matrix.target == 'x86_64-unknown-linux-musl'}}
       - name: Check Artifact
         run: |
           ls -al target/release
