--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -57,7 +57,7 @@ jobs:
       - name: Build Linux Musl
         uses: jean-dfinity/rust-musl-action@master
         with:
-          args: cargo default nightly && cargo +nightly build --target ${{ matrix.target }} --release
+          args: rustup default nightly && cargo build --target ${{ matrix.target }} --release
         if: ${{ matrix.target == 'x86_64-unknown-linux-musl'}}
       - name: Check Artifact
         run: |
