wip: 尝试静态编译linux版本

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -80,7 +80,7 @@ jobs:
           
           cd target/${{matrix.target}}/release
           ls -al
-          zip -r ${{ matrix.target.triple }}.zip admin* server* -x admin.d -x admin.pdb -x server.d -x server.pdb
+          sudo zip -r ${{ matrix.target.triple }}.zip admin* server* -x admin.d -x admin.pdb -x server.d -x server.pdb
           cp ${{ matrix.target.triple }}.zip ../../
 
       - name: Get current Commit ID
