wip: 尝试静态编译linux版本

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -80,7 +80,7 @@ jobs:
           
           cd target/${{matrix.target}}/release
           ls -al
-          sudo zip -r ${{ matrix.target.triple }}.zip admin* server* -x admin.d -x admin.pdb -x server.d -x server.pdb
+          sudo zip -r ${{ matrix.target }}.zip admin* server* -x admin.d -x admin.pdb -x server.d -x server.pdb
 
       - name: Get current Commit ID
         id: commitid
@@ -104,8 +104,8 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./target/${{matrix.target}}/release/${{ matrix.target.triple }}.zip
-          asset_name: ${{ matrix.target.triple }}.zip
+          asset_path: ./target/${{matrix.target}}/release/${{ matrix.target }}.zip
+          asset_name: ${{ matrix.target }}.zip
           asset_content_type: application/zip
 
       - name: Clear the cargo caches
