--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,11 +9,11 @@ jobs:
     strategy:
       matrix:
         target:
-          #          - i686-pc-windows-gnu
-          #          - i686-unknown-linux-gnu
-          #          - x86_64-apple-darwin
-          #          - x86_64-pc-windows-gnu
-          #          - x86_64-unknown-linux-gnu
+          - i686-pc-windows-gnu
+          - i686-unknown-linux-gnu
+          - x86_64-apple-darwin
+          - x86_64-pc-windows-gnu
+          - x86_64-unknown-linux-gnu
           - x86_64-unknown-linux-musl
     steps:
       - uses: actions/checkout@v2
