--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,20 +4,27 @@ name: Build
 
 jobs:
   build:
-    name: Build
-    runs-on: ubuntu-latest
+    name: ${{ matrix.target.name }} / ${{ matrix.version }}
+    runs-on: ${{ matrix.target.os }}
     strategy:
       matrix:
         target:
-          - x86_64-apple-darwin
-          - x86_64-pc-windows-gnu
+#          - x86_64-apple-darwin
+          - x86_64-pc-windows-msvc
           - x86_64-unknown-linux-musl
+    matrix:
+      target:
+        - { name: Linux, os: ubuntu-latest, triple: x86_64-unknown-linux-gnu }
+        - { name: macOS, os: macos-latest, triple: x86_64-apple-darwin }
+        - { name: Windows, os: windows-2022, triple: x86_64-pc-windows-msvc }
+      version:
+        - nightly
     steps:
       - uses: actions/checkout@v2
       - uses: actions-rs/toolchain@v1
         with:
           toolchain: nightly
-          target: ${{ matrix.target }}
+          target: ${{ matrix.target.triple }}
           override: true
       - name: Generate Cargo.lock
         uses: actions-rs/cargo@v1
@@ -25,26 +32,26 @@ jobs:
       - name: Cache Dependencies
         uses: Swatinem/rust-cache@v1.2.0
       - name: Install x86_64 Build Dependencies
-        if: ${{ matrix.target != 'i686-pc-windows-gnu' && matrix.target != 'i686-unknown-linux-gnu' }}
+        if: ${{ matrix.target.triple != 'i686-pc-windows-gnu' && matrix.target.triple != 'i686-unknown-linux-gnu' }}
         run: |
           sudo apt-get update && sudo apt-get install pkg-config libssl-dev clang
 
       - name: Build x86_64
         uses: actions-rs/cargo@v1
-        if: ${{ matrix.target != 'x86_64-unknown-linux-musl' }}
+        if: ${{ matrix.target.triple != 'x86_64-unknown-linux-musl' }}
         env:
           TARGET_CC: clang
           OPENSSL_LIB_DIR: /usr/lib/x86_64-linux-gnu/
           OPENSSL_INCLUDE_DIR: /usr/include/openssl/
         with:
           command: build
-          args: --release --target=${{ matrix.target }}
+          args: --release --target=${{ matrix.target.triple }}
 
       - name: Build Linux Musl
         uses: jean-dfinity/rust-musl-action@master
-        if: ${{ matrix.target == 'x86_64-unknown-linux-musl'}}
+        if: ${{ matrix.target.triple == 'x86_64-unknown-linux-musl'}}
         with:
-          args: rustup default nightly && rustup target add x86_64-unknown-linux-musl && cargo +nightly build --target=${{ matrix.target }} --release
+          args: rustup default nightly && rustup target add x86_64-unknown-linux-musl && cargo +nightly build --target=${{ matrix.target.triple }} --release
 
 
 
@@ -52,13 +59,13 @@ jobs:
         run: |
           pwd
           ls -al target
-          ls -al target/${{matrix.target}}
-          file target/${{matrix.target}}/release/admin
-          file target/${{matrix.target}}/release/server
+          ls -al target/${{matrix.target.triple}}
+          file target/${{matrix.target.triple}}/release/admin
+          file target/${{matrix.target.triple}}/release/server
           
-          cd target/${{matrix.target}}/release
+          cd target/${{matrix.target.triple}}/release
           ls -al
-          sudo zip -r ${{ matrix.target }}.zip admin* server* -x admin.d -x admin.pdb -x server.d -x server.pdb
+          sudo zip -r ${{ matrix.target.triple }}.zip admin* server* -x admin.d -x admin.pdb -x server.d -x server.pdb
 
       - name: Get current Commit ID
         id: branch
@@ -83,8 +90,8 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./target/${{matrix.target}}/release/${{ matrix.target }}.zip
-          asset_name: ${{ matrix.target }}.zip
+          asset_path: ./target/${{matrix.target.triple}}/release/${{ matrix.target.triple }}.zip
+          asset_name: ${{ matrix.target.triple }}.zip
           asset_content_type: application/zip
 
       - name: Clear the cargo caches
