--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,18 +6,19 @@ jobs:
   build:
     name: ${{ matrix.target.name }} / ${{ matrix.version }}
     runs-on: ${{ matrix.target.os }}
-    matrix:
-      target:
-        - { name: Linux, os: ubuntu-latest, triple: x86_64-unknown-linux-gnu }
-        - { name: macOS, os: macos-latest, triple: x86_64-apple-darwin }
-        - { name: Windows, os: windows-2022, triple: x86_64-pc-windows-msvc }
-      version:
-        - nightly
+    strategy:
+      matrix:
+        target:
+          - { name: Linux, os: ubuntu-latest, triple: x86_64-unknown-linux-gnu }
+          - { name: macOS, os: macos-latest, triple: x86_64-apple-darwin }
+          - { name: Windows, os: windows-2022, triple: x86_64-pc-windows-msvc }
+        version:
+          - nightly
     steps:
       - uses: actions/checkout@v2
       - uses: actions-rs/toolchain@v1
         with:
-          toolchain: nightly
+          toolchain: ${{matrix.version}}
           target: ${{ matrix.target.triple }}
           override: true
       - name: Generate Cargo.lock
