--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,39 +16,39 @@ jobs:
           - nightly
     steps:
       - uses: actions/checkout@v2
-      - uses: actions-rs/toolchain@v1
+      # install OpenSSL on Windows
+      # TODO: GitHub actions docs state that OpenSSL is
+      # already installed on these Windows machines somewhere
+      - name: Set vcpkg root
+        if: matrix.target.triple == 'x86_64-pc-windows-msvc'
+        run: echo "VCPKG_ROOT=$env:VCPKG_INSTALLATION_ROOT" | Out-File -FilePath $env:GITHUB_ENV -Append
+      - name: Install OpenSSL
+        if: matrix.target.triple == 'x86_64-pc-windows-msvc'
+        run: vcpkg install openssl:x64-windows
+
+      - name: Install ${{ matrix.version }}
+        uses: actions-rs/toolchain@v1
         with:
+          profile: minimal
           toolchain: ${{matrix.version}}
           target: ${{ matrix.target.triple }}
           override: true
-      - name: Generate Cargo.lock
-        uses: actions-rs/cargo@v1
-        with: { command: generate-lockfile }
+      - name: workaround MSRV issues
+        if: matrix.version != 'stable'
+        run: |
+          cargo update -p=zstd-sys --precise=2.0.1+zstd.1.5.2
       - name: Cache Dependencies
         uses: Swatinem/rust-cache@v1.2.0
-      - name: Install x86_64 Build Dependencies
-        if: ${{ matrix.target.triple != 'i686-pc-windows-gnu' && matrix.target.triple != 'i686-unknown-linux-gnu' }}
+
+      - name: build
+        if: ${{ matrix.target.triple != 'x86_64-unknown-linux-musl'}}
         run: |
-          sudo apt-get update && sudo apt-get install pkg-config libssl-dev clang
-
-      - name: Build x86_64
-        uses: actions-rs/cargo@v1
-        if: ${{ matrix.target.triple != 'x86_64-unknown-linux-musl' }}
-        env:
-          TARGET_CC: clang
-          OPENSSL_LIB_DIR: /usr/lib/x86_64-linux-gnu/
-          OPENSSL_INCLUDE_DIR: /usr/include/openssl/
-        with:
-          command: build
-          args: --release --target=${{ matrix.target.triple }}
-
+          cargo +nightly build --target=${{ matrix.target.triple }} --release
       - name: Build Linux Musl
         uses: jean-dfinity/rust-musl-action@master
         if: ${{ matrix.target.triple == 'x86_64-unknown-linux-musl'}}
         with:
           args: rustup default nightly && rustup target add x86_64-unknown-linux-musl && cargo +nightly build --target=${{ matrix.target.triple }} --release
-
-
 
       - name: Zip the Build
         run: |
